1.0.2: Feb 21, 2019
	- Add genes to plotDecorate()
	


1.0.1
	- add evaluateCorrDecay()
	- fix plotting for plotDecorate() and plotCompareCorr()

1.0.0
	- Release

0.99.3:
	- fix issues with ploting trees

0.99.2:
	- reduce memory usage substantially
	- reduce compute time 100x by using adaptive permutations


Jan 22, 2019:
    Initial version