@@ -21,6 +21,7 @@ export(runOrderedClusteringGenome)
 export(scoreClusters)
 export(whichCluster)
 exportClasses(sLEDresults)
+exportMethods(countClusters)
 exportMethods(evalDiffCorr)
 exportMethods(getSubset)
 exportMethods(summary)
@@ -73,4 +74,3 @@ importFrom(stats,quantile)
 importFrom(utils,assignInNamespace)
 importFrom(utils,combn)
 importFrom(utils,object.size)
-useDynLib(decorate, .registration=TRUE)
