@@ -1,10 +1,17 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/local_correlations.R
+\docType{methods}
 \name{countClusters}
 \alias{countClusters}
+\alias{countClusters,epiclustDiscreteList-method}
+\alias{countClusters,epiclustDiscreteListContain-method}
 \title{Count clusters on each chromosome}
 \usage{
 countClusters(treeListClusters)
+
+\S4method{countClusters}{epiclustDiscreteList}(treeListClusters)
+
+\S4method{countClusters}{epiclustDiscreteListContain}(treeListClusters)
 }
 \arguments{
 \item{treeListClusters}{from createClusters()}
